# warepact

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
datapact/: __init__.py
datapact/adapters/alerting/: email.py  pagerduty.py  slack.py  teams.py  webhook.py
datapact/adapters/stores/: __init__.py  filesystem.py  gcs.py  s3.py
datapact/adapters/warehouses/: bigquery.py  databricks.py  duckdb.py  postgres.py  redshift.py  snowflake.py
datapact/cli/: _ai_enrichment.py  _console.py  _credentials.py  check.py  diff.py  generate.py  init.py  main.py  publish.py  report.py  watch.py
datapact/core/: __init__.py  contract.py  engine.py  registry.py
datapact/interfaces/: __init__.py  alerting.py  store.py  validator.py
datapact/mcp/: server.py
datapact/parsers/: __init__.py  dbt_parser.py  json_parser.py  yaml_parser.py
datapact/plugins/: README.md
datapact/validators/: __init__.py  custom_sql.py  distribution.py  freshness.py  nulls.py  schedule.py  schema.py  volume.py
tests/: test_adapter_alerting.py  test_adapter_duckdb.py  test_adapter_slack.py  test_adapter_snowflake.py  test_adapter_stores.py  test_adapter_warehouses.py  test_cli.py  test_contract.py  test_e2e_duckdb.py  test_engine.py  test_exceptions.py  test_interfaces.py  test_json_parser.py  test_mcp.py  test_registry.py  test_validators.py  test_yaml_parser.py
warepact/: __init__.py
warepact/adapters/alerting/: email.py  pagerduty.py  slack.py  teams.py  webhook.py
warepact/adapters/stores/: __init__.py  filesystem.py  gcs.py  s3.py
warepact/adapters/warehouses/: bigquery.py  databricks.py  duckdb.py  postgres.py  redshift.py  snowflake.py
warepact/cli/: _ai_enrichment.py  _console.py  _credentials.py  check.py  diff.py  generate.py  init.py  main.py  publish.py  report.py  watch.py
warepact/core/: __init__.py  contract.py  engine.py  exceptions.py  registry.py
warepact/interfaces/: __init__.py  alerting.py  store.py  validator.py  warehouse.py
warepact/mcp/: server.py
warepact/parsers/: __init__.py  dbt_parser.py  json_parser.py  yaml_parser.py
warepact/plugins/: README.md
warepact/validators/: __init__.py  custom_sql.py  distribution.py  freshness.py  nulls.py  schedule.py  schema.py  volume.py
